--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,72 @@
   border-radius: 2%;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.205);
 }
+
+input {
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15;
+}
+
+.form,
+.main-btn {
+  justify-content: center;
+  display: grid;
+}
+
+/* 
+
+#root {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	width: 100vw;
+	background: #ff512f; // fallback for old browsers 
+	background: -webkit-linear-gradient(
+		to right,
+		#dd2476,
+		#ff512f
+	); // Chrome 10-25, Safari 5.1-6 
+	background: linear-gradient(to right, #dd2476, #ff512f);
+}
+
+.App {
+	width: 450px;
+	display: flex;
+	height: 70vh;
+	justify-content: space-around;
+	flex-direction: column;
+	background: #ffff;
+	border-radius: 10px;
+}
+
+form {
+	width: 80%;
+	margin: 0 auto;
+	margin-top: 20px;
+}
+
+input {
+	background: #f9f9f9;
+	padding: 10px;
+	width: 100%;
+	border: none;
+	margin-bottom: 20px;
+	font-size: 14px;
+	color: rgb(0, 0, 0);
+	outline: none;
+	font-weight: 300;
+}
+
+.rccs__card--unknown > div {
+	background: #75c9a5;
+}
+
+*/
