--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,8 @@
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.205);
 }
 
-input {
+input,
+.main-select {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
